@@ -1,4 +1,5 @@
 1.2.3 - TBD
+    * Added iron trapdoor
     * Fixed issue causing the render preview window to display white after
       being closed and re-opened
     * The name of the biome under the cursor is now displayed in the 2D map
